fix: broken layout

--- a/src/index.css
+++ b/src/index.css
@@ -25,4 +25,5 @@ body {
   display: flex;
   justify-content: center;
   background-color: #f3f3f3;
+  overflow-x: hidden;
 }
